RESOLVED FIXED104162
[BlackBerry] Geolocation prompts won't respond to the correct geolocation object if the user opens two pages and respond in the reversed order
https://bugs.webkit.org/show_bug.cgi?id=104162
Summary [BlackBerry] Geolocation prompts won't respond to the correct geolocation obj...
otcheung
Reported 2012-12-05 13:23:57 PST
We need to notify all geolisteners when a onPermission comes in, so it doesn't matter which infobar the user responds to, given multiple permission requests from the same origin.
Attachments
Patch (3.06 KB, patch)
2012-12-05 13:29 PST, otcheung
no flags
Patch (3.40 KB, patch)
2012-12-05 14:06 PST, otcheung
no flags
otcheung
Comment 1 2012-12-05 13:29:25 PST
Yong Li
Comment 2 2012-12-05 13:59:24 PST
Comment on attachment 177821 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177821&action=review > Source/WebKit/blackberry/WebCoreSupport/GeolocationClientBlackBerry.cpp:165 > + if (m_geolocationRequestMap.isEmpty()) > + BlackBerry::Platform::GeolocationHandler::instance()->unregisterFromPermissionTracking(this); let's also do this in the dtor.
otcheung
Comment 3 2012-12-05 14:06:47 PST
WebKit Review Bot
Comment 4 2012-12-05 14:47:50 PST
Comment on attachment 177826 [details] Patch Clearing flags on attachment: 177826 Committed r136764: <http://trac.webkit.org/changeset/136764>
WebKit Review Bot
Comment 5 2012-12-05 14:47:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.