[BlackBerry] Geolocation prompts won't respond to the correct geolocation object if the user opens two pages and respond in the reversed order https://bugs.webkit.org/show_bug.cgi?id=104162

PR 257505
Patch by Otto Derek Cheung <otcheung@rim.com> on 2012-12-05
Reviewed by Yong Li.

GeolocationClientBlackBerry will register itself to GeolocationHandler when it has
a pending request. When browser responds with WebPageClientImpl::setAllowGeolocation,
we go through the list and let all the pending GeolocationListeners know that a certain
origin has been aceepted/denied.

* WebCoreSupport/GeolocationClientBlackBerry.cpp:
(GeolocationClientBlackBerry::geolocationDestroyed):
(GeolocationClientBlackBerry::requestPermission):
(GeolocationClientBlackBerry::cancelPermissionRequest):
(GeolocationClientBlackBerry::onPermission):

git-svn-id: svn://svn.chromium.org/blink/trunk@136764 bbb929c8-8fbe-4397-9dbb-9b2b20218538